WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258020
REGRESSION: SVGMaskElement maskUnits/maskContentUnits dynamic updates broken
https://bugs.webkit.org/show_bug.cgi?id=258020
Summary
REGRESSION: SVGMaskElement maskUnits/maskContentUnits dynamic updates broken
Nikolas Zimmermann
Reported
2023-06-13 05:57:53 PDT
This is a follow-up issue, after
https://bugs.webkit.org/show_bug.cgi?id=257900
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2023-06-13 06:00:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14919
EWS
Comment 2
2023-06-13 15:38:17 PDT
Committed
265137@main
(03608538134c): <
https://commits.webkit.org/265137@main
> Reviewed commits have been landed. Closing PR #14919 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-06-13 15:39:17 PDT
<
rdar://problem/110737600
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug