REGRESSION: SVGMaskElement maskUnits/maskContentUnits dynamic updates broken https://bugs.webkit.org/show_bug.cgi?id=258020

Reviewed by Chris Dumez.

Fix the last two remaining issues with tests in svg/dynamic-updates:
SVGMaskElement maskUnits/maskContentUnits updates did not cause any visual effect.

Remove early returns, to assure SVGElement::attributeChanged() gets called
in SVGMaskElement::attributeChanged().

Covered by existing tests.

* Source/WebCore/svg/SVGMaskElement.cpp:
(WebCore::SVGMaskElement::attributeChanged):

Canonical link: https://commits.webkit.org/265137@main